@@ -56,6 +56,7 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Properties;
 import java.util.Queue;
 import java.util.function.BiConsumer;
@@ -85,8 +86,15 @@ import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.driver.MacroOption.EnabledOption;
 import com.oracle.svm.driver.MacroOption.MacroOptionKind;
 import com.oracle.svm.driver.MacroOption.Registry;
+import com.oracle.svm.hosted.ImageClassLoader;
+import com.oracle.svm.hosted.NativeImageSystemClassLoader;
+import com.oracle.svm.util.ModuleSupport;
 
 public class NativeImage {
+
+    private static final String DEFAULT_GENERATOR_CLASS_NAME = "com.oracle.svm.hosted.NativeImageGeneratorRunner";
+    private static final String DEFAULT_GENERATOR_9PLUS_SUFFIX = "$JDK9Plus";
+    private static final String CUSTOM_SYSTEM_CLASS_LOADER = NativeImageSystemClassLoader.class.getCanonicalName();
 
     static final boolean IS_AOT = Boolean.getBoolean("com.oracle.graalvm.isaot");
 
@@ -142,12 +150,14 @@ public class NativeImage {
         }
     }
 
+    final DefaultOptionHandler defaultOptionHandler;
     final APIOptionHandler apiOptionHandler;
 
     public static final String oH = "-H:";
     static final String oR = "-R:";
 
     final String enablePrintFlags = SubstrateOptions.PrintFlags.getName() + "=";
+    final String enablePrintFlagsWithExtraHelp = SubstrateOptions.PrintFlagsWithExtraHelp.getName() + "=";
 
     private static <T> String oH(OptionKey<T> option) {
         return oH + option.getName() + "=";
@@ -175,6 +185,7 @@ public class NativeImage {
     final String oHJNIConfigurationFiles = oH(ConfigurationFiles.Options.JNIConfigurationFiles);
 
     final String oHInspectServerContentPath = oH(PointstoOptions.InspectServerContentPath);
+    final String oHDeadlockWatchdogInterval = oH(SubstrateOptions.DeadlockWatchdogInterval);
 
     static final String oXmx = "-Xmx";
     static final String oXms = "-Xms";
@@ -184,6 +195,7 @@ public class NativeImage {
     private final LinkedHashSet<String> imageBuilderArgs = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageBuilderClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageBuilderBootClasspath = new LinkedHashSet<>();
+    private final LinkedHashSet<String> imageIncludeBuiltinModules = new LinkedHashSet<>();
     private final ArrayList<String> imageBuilderJavaArgs = new ArrayList<>();
     private final LinkedHashSet<Path> imageClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageProvidedClasspath = new LinkedHashSet<>();
@@ -200,7 +212,8 @@ public class NativeImage {
     private boolean verbose = Boolean.valueOf(System.getenv("VERBOSE_GRAALVM_LAUNCHERS"));
     private boolean jarOptionMode = false;
     private boolean dryRun = false;
-    private String queryOption = null;
+    private String printFlagsOptionQuery = null;
+    private String printFlagsWithExtraHelpOptionQuery = null;
 
     final Registry optionRegistry;
     private LinkedHashSet<EnabledOption> enabledLanguages;
@@ -210,10 +223,28 @@ public class NativeImage {
 
     public interface BuildConfiguration {
         /**
+         * @return the name of the image generator main class.
+         */
+        default String getGeneratorMainClass() {
+            String generatorClassName = DEFAULT_GENERATOR_CLASS_NAME;
+            if (useJavaModules()) {
+                generatorClassName += DEFAULT_GENERATOR_9PLUS_SUFFIX;
+            }
+            return generatorClassName;
+        }
+
+        /**
          * @return relative path usage get resolved against this path (also default path for image
          *         building)
          */
         Path getWorkingDirectory();
+
+        /**
+         * @return java.home that is associated with this BuildConfiguration
+         */
+        default Path getJavaHome() {
+            throw VMError.unimplemented();
+        }
 
         /**
          * @return path to Java executable
@@ -369,8 +400,18 @@ public class NativeImage {
             return false;
         }
 
-        default String getAgentJAR() {
+        default Path getAgentJAR() {
             return null;
+        }
+
+        /**
+         * ResourcesJar packs resources files needed for some jdk services such as xml
+         * serialization.
+         *
+         * @return the path to the resources.jar file
+         */
+        default Optional<Path> getResourcesJar() {
+            return Optional.empty();
         }
     }
 
@@ -419,6 +460,11 @@ public class NativeImage {
         }
 
         @Override
+        public Path getJavaHome() {
+            return useJavaModules() ? rootDir : rootDir.getParent();
+        }
+
+        @Override
         public Path getJavaExecutable() {
             Path binJava = Paths.get("bin", OS.getCurrent() == OS.WINDOWS ? "java.exe" : "java");
             if (Files.isExecutable(rootDir.resolve(binJava))) {
@@ -429,11 +475,14 @@ public class NativeImage {
             if (javaHome == null) {
                 throw showError("Environment variable JAVA_HOME is not set");
             }
-            Path javaHomePath = Paths.get(javaHome);
-            if (!Files.isExecutable(javaHomePath.resolve(binJava))) {
+            Path javaHomeDir = Paths.get(javaHome);
+            if (!Files.isDirectory(javaHomeDir)) {
+                throw showError("Environment variable JAVA_HOME does not refer to a directory");
+            }
+            if (!Files.isExecutable(javaHomeDir.resolve(binJava))) {
                 throw showError("Environment variable JAVA_HOME does not refer to a directory with a " + binJava + " executable");
             }
-            return javaHomePath.resolve(binJava);
+            return javaHomeDir.resolve(binJava);
         }
 
         @Override
@@ -513,10 +562,14 @@ public class NativeImage {
         }
 
         @Override
-        public String getAgentJAR() {
-            return rootDir.resolve(Paths.get("lib", "svm", "builder", "svm.jar")).toAbsolutePath().toString();
+        public Path getAgentJAR() {
+            return rootDir.resolve(Paths.get("lib", "svm", "builder", "svm.jar"));
         }
 
+        @Override
+        public Optional<Path> getResourcesJar() {
+            return Optional.of(rootDir.resolve(Paths.get("lib", "resources.jar")));
+        }
     }
 
     private ArrayList<String> createFallbackBuildArgs() {
@@ -550,6 +603,13 @@ public class NativeImage {
         buildArgs.add(oHPath + imagePath.toString());
         buildArgs.add(oH(FallbackExecutor.Options.FallbackExecutorClasspath) + classpathString);
         buildArgs.add(oH(FallbackExecutor.Options.FallbackExecutorMainClass) + mainClass);
+
+        /*
+         * The fallback image on purpose captures the Java home directory used for image generation,
+         * see field FallbackExecutor.buildTimeJavaHome
+         */
+        buildArgs.add(oH + "-" + SubstrateOptions.DetectUserDirectoriesInImageHeap.getName());
+
         buildArgs.add(FallbackExecutor.class.getName());
         buildArgs.add(imageName);
 
@@ -611,7 +671,8 @@ public class NativeImage {
         optionRegistry = new MacroOption.Registry();
 
         /* Default handler needs to be fist */
-        registerOptionHandler(new DefaultOptionHandler(this));
+        defaultOptionHandler = new DefaultOptionHandler(this);
+        registerOptionHandler(defaultOptionHandler);
         apiOptionHandler = new APIOptionHandler(this);
         registerOptionHandler(apiOptionHandler);
         registerOptionHandler(new MacroOptionHandler(this));
@@ -658,10 +719,20 @@ public class NativeImage {
         addImageBuilderJavaArgs(oXms + getXmsValue());
         addImageBuilderJavaArgs(oXmx + getXmxValue(1));
         addImageBuilderJavaArgs("-Duser.country=US", "-Duser.language=en");
+        /* Prevent JVM that runs the image builder to steal focus */
+        if (OS.getCurrent() != OS.WINDOWS || JavaVersionUtil.JAVA_SPEC > 8) {
+            /* Conditional because of https://bugs.openjdk.java.net/browse/JDK-8159956 */
+            addImageBuilderJavaArgs("-Djava.awt.headless=true");
+        }
         addImageBuilderJavaArgs("-Dorg.graalvm.version=" + graalvmVersion);
         addImageBuilderJavaArgs("-Dorg.graalvm.config=" + graalvmConfig);
         addImageBuilderJavaArgs("-Dcom.oracle.graalvm.isaot=true");
-
+        addImageBuilderJavaArgs("-Djava.system.class.loader=" + CUSTOM_SYSTEM_CLASS_LOADER);
+        /*
+         * The presence of CDS and custom system class loaders disables the use of archived
+         * non-system class and and triggers a warning.
+         */
+        addImageBuilderJavaArgs("-Xshare:off");
         config.getBuilderClasspath().forEach(this::addImageBuilderClasspath);
         config.getImageProvidedClasspath().forEach(this::addImageProvidedClasspath);
         String clibrariesBuilderArg = config.getBuilderCLibrariesPaths()
@@ -677,11 +748,15 @@ public class NativeImage {
             String modulePath = config.getBuilderModulePath().stream()
                             .map(p -> canonicalize(p).toString())
                             .collect(Collectors.joining(File.pathSeparator));
-            addImageBuilderJavaArgs(Arrays.asList("--module-path", modulePath));
+            if (!modulePath.isEmpty()) {
+                addImageBuilderJavaArgs(Arrays.asList("--module-path", modulePath));
+            }
             String upgradeModulePath = config.getBuilderUpgradeModulePath().stream()
                             .map(p -> canonicalize(p).toString())
                             .collect(Collectors.joining(File.pathSeparator));
-            addImageBuilderJavaArgs(Arrays.asList("--upgrade-module-path", upgradeModulePath));
+            if (!upgradeModulePath.isEmpty()) {
+                addImageBuilderJavaArgs(Arrays.asList("--upgrade-module-path", upgradeModulePath));
+            }
         } else {
             config.getBuilderJVMCIClasspath().forEach((Consumer<? super Path>) this::addImageBuilderClasspath);
             if (!config.getBuilderJVMCIClasspathAppend().isEmpty()) {
@@ -692,6 +767,7 @@ public class NativeImage {
             }
 
             config.getBuilderBootClasspath().forEach((Consumer<? super Path>) this::addImageBuilderBootClasspath);
+            config.getResourcesJar().ifPresent(this::addImageBuilderClasspath);
         }
 
         config.getImageClasspath().forEach(this::addCustomImageClasspath);
@@ -854,7 +930,7 @@ public class NativeImage {
                             String optionArgKey = componentDirectory.subpath(2, nameCount).toString();
                             optionArg = propertyFileSubstitutionValues.get(optionArgKey);
                         }
-                        return resolvePropertyValue(str, optionArg, componentDirectory.toString());
+                        return resolvePropertyValue(str, optionArg, componentDirectory, config);
                     };
                     showVerboseMessage(isVerbose(), "Apply " + nativeImageMetaInfFile.toUri());
                     try {
@@ -955,13 +1031,16 @@ public class NativeImage {
 
         completeOptionArgs();
 
-        if (queryOption != null) {
-            addPlainImageBuilderArg(NativeImage.oH + enablePrintFlags + queryOption);
-            addPlainImageBuilderArg(NativeImage.oR + enablePrintFlags + queryOption);
+        if (printFlagsOptionQuery != null) {
+            addPlainImageBuilderArg(NativeImage.oH + enablePrintFlags + printFlagsOptionQuery);
+            addPlainImageBuilderArg(NativeImage.oR + enablePrintFlags + printFlagsOptionQuery);
+        } else if (printFlagsWithExtraHelpOptionQuery != null) {
+            addPlainImageBuilderArg(NativeImage.oH + enablePrintFlagsWithExtraHelp + printFlagsWithExtraHelpOptionQuery);
+            addPlainImageBuilderArg(NativeImage.oR + enablePrintFlagsWithExtraHelp + printFlagsWithExtraHelpOptionQuery);
         }
 
         /* If no customImageClasspath was specified put "." on classpath */
-        if (!config.buildFallbackImage() && customImageClasspath.isEmpty() && queryOption == null) {
+        if (!config.buildFallbackImage() && customImageClasspath.isEmpty() && printFlagsOptionQuery == null && printFlagsWithExtraHelpOptionQuery == null) {
             addImageClasspath(Paths.get("."));
         } else {
             imageClasspath.addAll(customImageClasspath);
@@ -974,9 +1053,13 @@ public class NativeImage {
             replaceArg(imageBuilderJavaArgs, oXms, Long.toUnsignedString(xmxValue));
         }
 
-        /* Enable class initializaiton tracing agent. */
-        if (traceClassInitialization()) {
-            imageBuilderJavaArgs.add("-javaagent:" + config.getAgentJAR());
+        imageBuilderJavaArgs.add("-javaagent:" + config.getAgentJAR().toAbsolutePath().toString() + (traceClassInitialization() ? "=traceInitialization" : ""));
+        imageBuilderJavaArgs.add("-Djdk.internal.lambda.disableEagerInitialization=true");
+        // The following two are for backwards compatibility reasons. They should be removed.
+        imageBuilderJavaArgs.add("-Djdk.internal.lambda.eagerlyInitialize=false");
+        imageBuilderJavaArgs.add("-Djava.lang.invoke.InnerClassLambdaMetafactory.initializeLambdas=false");
+        if (!imageIncludeBuiltinModules.isEmpty()) {
+            imageBuilderJavaArgs.add("-D" + ImageClassLoader.PROPERTY_IMAGEINCLUDEBUILTINMODULES + "=" + String.join(",", imageIncludeBuiltinModules));
         }
 
         /* After JavaArgs consolidation add the user provided JavaArgs */
@@ -1001,8 +1084,8 @@ public class NativeImage {
 
         consolidateArgs(imageBuilderArgs, oHName, Function.identity(), Function.identity(), () -> null, takeLast);
         mainClass = consolidateSingleValueArg(imageBuilderArgs, oHClass);
-        boolean buildExecutable = !imageBuilderArgs.stream().anyMatch(arg -> arg.contains(enableSharedLibraryFlag));
-        boolean printFlags = imageBuilderArgs.stream().anyMatch(arg -> arg.contains(enablePrintFlags));
+        boolean buildExecutable = imageBuilderArgs.stream().noneMatch(arg -> arg.contains(enableSharedLibraryFlag));
+        boolean printFlags = imageBuilderArgs.stream().anyMatch(arg -> arg.contains(enablePrintFlags) || arg.contains(enablePrintFlagsWithExtraHelp));
 
         if (!printFlags) {
             List<String> extraImageArgs = new ArrayList<>();
@@ -1067,7 +1150,6 @@ public class NativeImage {
         }
 
         LinkedHashSet<Path> finalImageClasspath = new LinkedHashSet<>(imageBuilderBootClasspath);
-        finalImageClasspath.addAll(imageBuilderClasspath);
         finalImageClasspath.addAll(imageProvidedClasspath);
         finalImageClasspath.addAll(imageClasspath);
 
@@ -1112,7 +1194,7 @@ public class NativeImage {
         }
 
         command.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
-        command.add("com.oracle.svm.hosted.NativeImageGeneratorRunner");
+        command.add(config.getGeneratorMainClass());
         if (IS_AOT && OS.getCurrent().hasProcFS) {
             /*
              * GR-8254: Ensure image-building VM shuts down even if native-image dies unexpected
@@ -1123,7 +1205,7 @@ public class NativeImage {
         command.addAll(createImageBuilderArgs(imageArgs, imagecp));
 
         showVerboseMessage(isVerbose() || dryRun, "Executing [");
-        showVerboseMessage(isVerbose() || dryRun, command.stream().collect(Collectors.joining(" \\\n")));
+        showVerboseMessage(isVerbose() || dryRun, SubstrateUtil.getShellCommandString(command, true));
         showVerboseMessage(isVerbose() || dryRun, "]");
 
         if (dryRun) {
@@ -1195,7 +1277,7 @@ public class NativeImage {
             if (config.getBuildArgs().contains("--verbose")) {
                 e.printStackTrace();
             }
-            System.exit(1);
+            System.exit(e.exitCode);
         }
         System.exit(0);
     }
@@ -1220,9 +1302,10 @@ public class NativeImage {
                 build(FallbackBuildConfiguration.create(nativeImage), nativeImageProvider);
                 showWarning("Image '" + nativeImage.imageName +
                                 "' is a fallback image that requires a JDK for execution " +
-                                "(use --" + SubstrateOptions.OptionNameNoFallback + " to suppress fallback image generation).");
+                                "(use --" + SubstrateOptions.OptionNameNoFallback +
+                                " to suppress fallback image generation and to print more detailed information why a fallback image was necessary).");
             } else if (buildStatus != 0) {
-                throw showError("Image build request failed with exit status " + buildStatus);
+                throw showError("Image build request failed with exit status " + buildStatus, null, buildStatus);
             }
         }
     }
@@ -1263,6 +1346,10 @@ public class NativeImage {
 
     void addImageBuilderBootClasspath(Path classpath) {
         imageBuilderBootClasspath.add(canonicalize(classpath));
+    }
+
+    public void addImageIncludeBuiltinModules(String moduleName) {
+        imageIncludeBuiltinModules.add(moduleName);
     }
 
     void addImageBuilderJavaArgs(String... javaArgs) {
@@ -1395,6 +1482,10 @@ public class NativeImage {
         return verbose;
     }
 
+    boolean useDebugAttach() {
+        return defaultOptionHandler.useDebugAttach;
+    }
+
     protected void setDryRun(boolean val) {
         dryRun = val;
     }
@@ -1403,8 +1494,12 @@ public class NativeImage {
         return dryRun;
     }
 
-    public void setQueryOption(String val) {
-        this.queryOption = val;
+    public void setPrintFlagsOptionQuery(String val) {
+        this.printFlagsOptionQuery = val;
+    }
+
+    public void setPrintFlagsWithExtraHelpOptionQuery(String val) {
+        this.printFlagsWithExtraHelpOptionQuery = val;
     }
 
     void showVerboseMessage(boolean show, String message) {
@@ -1434,12 +1529,20 @@ public class NativeImage {
 
     @SuppressWarnings("serial")
     public static final class NativeImageError extends Error {
+
+        final int exitCode;
+
         private NativeImageError(String message) {
-            super(message);
+            this(message, null);
         }
 
         private NativeImageError(String message, Throwable cause) {
+            this(message, cause, 1);
+        }
+
+        public NativeImageError(String message, Throwable cause, int exitCode) {
             super(message, cause);
+            this.exitCode = exitCode;
         }
     }
 
@@ -1449,6 +1552,10 @@ public class NativeImage {
 
     public static Error showError(String message, Throwable cause) {
         throw new NativeImageError(message, cause);
+    }
+
+    public static Error showError(String message, Throwable cause, int exitCode) {
+        throw new NativeImageError(message, cause, exitCode);
     }
 
     private static void show(Consumer<String> printFunc, String message) {
@@ -1495,6 +1602,7 @@ public class NativeImage {
         return "1g";
     }
 
+    @SuppressWarnings("deprecation") // getTotalPhysicalMemorySize deprecated since JDK 14
     private static long getPhysicalMemorySize() {
         OperatingSystemMXBean osMXBean = ManagementFactory.getOperatingSystemMXBean();
         long totalPhysicalMemorySize = ((com.sun.management.OperatingSystemMXBean) osMXBean).getTotalPhysicalMemorySize();
@@ -1553,7 +1661,7 @@ public class NativeImage {
         propertyFileSubstitutionValues.put(key, value);
     }
 
-    static String resolvePropertyValue(String val, String optionArg, String componentDirectory) {
+    static String resolvePropertyValue(String val, String optionArg, Path componentDirectory, BuildConfiguration config) {
         String resultVal = val;
         if (optionArg != null) {
             /* Substitute ${*} -> optionArg in resultVal (always possible) */
@@ -1574,7 +1682,9 @@ public class NativeImage {
             }
         }
         /* Substitute ${.} -> absolute path to optionDirectory */
-        resultVal = safeSubstitution(resultVal, "${.}", componentDirectory);
+        resultVal = safeSubstitution(resultVal, "${.}", componentDirectory.toString());
+        /* Substitute ${java.home} -> to java.home of BuildConfiguration */
+        resultVal = safeSubstitution(resultVal, "${java.home}", config.getJavaHome().toString());
         return resultVal;
     }
 
@@ -1604,6 +1714,30 @@ public class NativeImage {
                 showMessage("Could not recursively delete path: " + toDelete);
                 e.printStackTrace();
             }
+        }
+    }
+
+    /**
+     * Command line entry point when running on JDK9+. This is required to dynamically export Graal
+     * to SVM and it requires {@code --add-exports=java.base/jdk.internal.module=ALL-UNNAMED} to be
+     * on the VM command line.
+     *
+     * Note: This is a workaround until GR-16855 is resolved.
+     */
+    public static class JDK9Plus {
+
+        // Must be distinct from NativeImage.IS_AOT since the module
+        // exporting must be executed prior to NativeImage being loaded.
+        private static final boolean IS_AOT = Boolean.getBoolean("com.oracle.graalvm.isaot");
+
+        public static void main(String[] args) {
+            if (!IS_AOT) {
+                ModuleSupport.exportAndOpenAllPackagesToUnnamed("jdk.internal.vm.compiler", false);
+                ModuleSupport.exportAndOpenAllPackagesToUnnamed("jdk.internal.vm.compiler.management", true);
+                ModuleSupport.exportAndOpenAllPackagesToUnnamed("com.oracle.graal.graal_enterprise", true);
+                ModuleSupport.exportAndOpenAllPackagesToUnnamed("java.xml", false);
+            }
+            NativeImage.main(args);
         }
     }
 }
