@@ -36,12 +36,14 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import java.util.Scanner;
 import java.util.ServiceLoader;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.apache.maven.artifact.Artifact;
+import org.apache.maven.execution.MavenSession;
 import org.apache.maven.model.ConfigurationContainer;
 import org.apache.maven.model.Plugin;
 import org.apache.maven.model.PluginExecution;
@@ -49,9 +51,12 @@ import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.descriptor.PluginDescriptor;
 import org.apache.maven.plugins.annotations.LifecyclePhase;
+import org.apache.maven.plugins.annotations.Component;
 import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.project.MavenProject;
+import org.apache.maven.toolchain.ToolchainManager;
+import org.apache.maven.toolchain.java.DefaultJavaToolChain;
 import org.codehaus.plexus.archiver.tar.TarGZipUnArchiver;
 import org.codehaus.plexus.logging.AbstractLogger;
 import org.codehaus.plexus.logging.Logger;
@@ -61,10 +66,11 @@ import org.graalvm.compiler.options.OptionDescriptors;
 
 import com.oracle.svm.core.OS;
 import com.oracle.svm.driver.NativeImage;
+import com.oracle.svm.util.ModuleSupport;
 
 @Mojo(name = "native-image", defaultPhase = LifecyclePhase.PACKAGE)
 public class NativeImageMojo extends AbstractMojo {
-    private static final String svmGroupId = "com.oracle.substratevm";
+    private static final String svmGroupId = "org.graalvm.nativeimage";
 
     @Parameter(defaultValue = "${project}", readonly = true, required = true)//
     private MavenProject project;
@@ -86,6 +92,12 @@ public class NativeImageMojo extends AbstractMojo {
 
     @Parameter(property = "skip", defaultValue = "false")//
     private boolean skip;
+
+    @Parameter(defaultValue = "${session}", readonly = true)//
+    private MavenSession session;
+
+    @Component
+    private ToolchainManager toolchainManager;
 
     private Logger tarGzLogger = new AbstractLogger(Logger.LEVEL_WARN, "NativeImageMojo.tarGzLogger") {
         @Override
@@ -163,7 +175,7 @@ public class NativeImageMojo extends AbstractMojo {
         addClasspath(project.getArtifact());
         String classpathStr = classpath.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator));
 
-        Path nativeImageExecutable = getJavaHome().resolve("bin").resolve(withExeSuffix("native-image"));
+        Path nativeImageExecutable = getMojoJavaHome().resolve("bin").resolve(withExeSuffix("native-image"));
         if (Files.isExecutable(nativeImageExecutable)) {
             String nativeImageExecutableVersion = "Unknown";
             Process versionCheckProcess = null;
@@ -230,6 +242,7 @@ public class NativeImageMojo extends AbstractMojo {
             }
 
             try {
+                ModuleSupport.exportAndOpenAllPackagesToUnnamed("jdk.internal.vm.ci", false);
                 MojoBuildConfiguration config = new MojoBuildConfiguration();
                 getLog().info("WorkingDirectory: " + config.getWorkingDirectory());
                 getLog().info("ImageClasspath: " + classpathStr);
@@ -249,6 +262,8 @@ public class NativeImageMojo extends AbstractMojo {
                 NativeImage.build(config);
             } catch (NativeImage.NativeImageError e) {
                 throw new MojoExecutionException("Error creating native image:", e);
+            } catch (IllegalAccessError e) {
+                throw new MojoExecutionException("Image building on Java 11+ without native-image requires MAVEN_OPTS='--add-exports=java.base/jdk.internal.module=ALL-UNNAMED'", e);
             }
         }
     }
@@ -298,8 +313,12 @@ public class NativeImageMojo extends AbstractMojo {
         classpath.add(jarFilePath);
     }
 
-    private static Path getJavaHome() {
-        return Paths.get(System.getProperty("java.home"));
+    private Path getMojoJavaHome() {
+        return Paths.get(Optional.ofNullable(toolchainManager)
+            .map(tm -> tm.getToolchainFromBuildContext("jdk", session))
+            .filter(DefaultJavaToolChain.class::isInstance).map(DefaultJavaToolChain.class::cast)
+            .map(DefaultJavaToolChain::getJavaHome)
+            .orElse(System.getProperty("java.home")));
     }
 
     private Path getWorkingDirectory() {
@@ -396,6 +415,11 @@ public class NativeImageMojo extends AbstractMojo {
         }
 
         @Override
+        public Path getJavaHome() {
+            return getMojoJavaHome();
+        }
+
+        @Override
         public Path getJavaExecutable() {
             return getJavaHome().resolve("bin").resolve(withExeSuffix("java"));
         }
@@ -472,6 +496,11 @@ public class NativeImageMojo extends AbstractMojo {
         @Override
         public List<String> getBuildArgs() {
             return NativeImageMojo.this.getBuildArgs();
+        }
+
+        @Override
+        public Path getAgentJAR() {
+           return getSelectedArtifactPaths(svmGroupId, "svm").get(0);
         }
     }
 }
